--- a/views/svelte/package.json
+++ b/views/svelte/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@altv-chat/svelte",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -10,13 +10,19 @@
         "check": "svelte-check --tsconfig ./tsconfig.json"
     },
     "devDependencies": {
+        "@altv/types-webview": "^1.0.3",
         "@sveltejs/vite-plugin-svelte": "^1.0.1",
         "@tsconfig/svelte": "^3.0.0",
+        "autoprefixer": "^10.4.8",
+        "postcss": "^8.4.14",
+        "postcss-load-config": "^4.0.1",
+        "sass": "^1.54.1",
         "svelte": "^3.49.0",
         "svelte-check": "^2.8.0",
         "svelte-preprocess": "^4.10.7",
+        "tailwindcss": "^3.1.7",
         "tslib": "^2.4.0",
-        "typescript": "^4.6.4",
-        "vite": "^3.0.0"
+        "typescript": "^4.7.4",
+        "vite": "^3.0.4"
     }
 }
