--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,11 @@
 {
     "$schema": "https://turborepo.org/schema.json",
-    "baseBranch": "origin/main",
     "pipeline": {
         "build": {
+            "dependsOn": ["^build"],
+            "outputs": ["dist/**"]
+        },
+        "dev": {
             "dependsOn": ["^build"],
             "outputs": ["dist/**"]
         }
