--- a/views/svelte/package.json
+++ b/views/svelte/package.json
@@ -4,25 +4,25 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --port=4000",
         "build": "vite build",
         "preview": "vite preview",
         "check": "svelte-check --tsconfig ./tsconfig.json"
     },
     "devDependencies": {
-        "@altv/types-webview": "^1.0.3",
+        "@altv/types-webview": "^1.0.4",
         "@sveltejs/vite-plugin-svelte": "^1.0.1",
         "@tsconfig/svelte": "^3.0.0",
         "autoprefixer": "^10.4.8",
-        "postcss": "^8.4.14",
+        "postcss": "^8.4.16",
         "postcss-load-config": "^4.0.1",
-        "sass": "^1.54.1",
+        "sass": "^1.54.4",
         "svelte": "^3.49.0",
-        "svelte-check": "^2.8.0",
+        "svelte-check": "^2.8.1",
         "svelte-preprocess": "^4.10.7",
-        "tailwindcss": "^3.1.7",
+        "tailwindcss": "^3.1.8",
         "tslib": "^2.4.0",
         "typescript": "^4.7.4",
-        "vite": "^3.0.4"
+        "vite": "^3.0.8"
     }
 }
