--- a/views/react/package.json
+++ b/views/react/package.json
@@ -4,18 +4,26 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --port=4000",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.8.5",
+        "classnames": "^2.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@altv/types-webview": "^1.0.4",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
         "@vitejs/plugin-react": "^2.0.1",
+        "autoprefixer": "^10.4.8",
+        "postcss": "^8.4.16",
+        "react-redux": "^8.0.2",
+        "sass": "^1.54.5",
+        "tailwindcss": "^3.1.8",
         "typescript": "^4.7.4",
         "vite": "^3.0.9"
     }
