--- a/views/vue/package.json
+++ b/views/vue/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --port=4000",
         "build": "vue-tsc --noEmit && vite build",
         "preview": "vite preview"
     },
@@ -12,7 +12,11 @@
         "vue": "^3.2.37"
     },
     "devDependencies": {
+        "@altv/types-webview": "^1.0.4",
         "@vitejs/plugin-vue": "^3.0.3",
+        "autoprefixer": "^10.4.8",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8",
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
         "vue-tsc": "^0.40.1"
