--- a/views/solid/package.json
+++ b/views/solid/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "@altv-chat/vue",
+    "name": "@altv-chat/solid",
     "private": true,
     "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite --port=4000",
-        "build": "vue-tsc --noEmit && vite build",
-        "preview": "vite preview"
+        "build": "vite build",
+        "serve": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.2.37"
+        "solid-js": "^1.5.0"
     },
     "devDependencies": {
         "@altv/types-webview": "^1.0.4",
-        "@vitejs/plugin-vue": "^3.0.3",
         "autoprefixer": "^10.4.8",
+        "classnames": "^2.3.1",
         "postcss": "^8.4.16",
+        "sass": "^1.54.5",
         "tailwindcss": "^3.1.8",
         "typescript": "^4.8.2",
         "vite": "^3.0.9",
-        "vue-tsc": "^0.40.1"
+        "vite-plugin-solid": "^2.3.0"
     }
 }
