--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "lib": ["ES2022"],
-        "module": "ES2022",
-        "target": "ES2022",
+        "lib": ["ESNext"],
+        "module": "ESNext",
+        "target": "ESNext",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
