--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,6 @@
         "@types/node": "^18.7.13",
         "esbuild": "^0.15.5",
         "rollup": "^2.78.1",
-        "rollup-plugin-esbuild": "^4.9.3",
-        "typescript": "^4.8.2"
+        "rollup-plugin-esbuild": "^4.9.3"
     }
 }
