--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "lib": ["ES2022"],
-        "module": "ES2022",
-        "target": "ES2022",
+        "lib": ["ESNext"],
+        "module": "ESNext",
+        "target": "ESNext",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
@@ -20,6 +20,7 @@
         "noUnusedParameters": true,
         "importsNotUsedAsValues": "error",
         "checkJs": true,
+        "experimentalDecorators": true,
         "typeRoots": ["./node_modules/@types", "./node_modules/@altv"]
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts"]
