Fix svelte example

--- a/settings.json
+++ b/settings.json
@@ -1,11 +1,14 @@
 {
     "prefix": "/",
-    "showCursor": false,
     "placeholder": "Type a message...",
-    "maxMessages": 100,
-    "maxMessageHistory": 100,
     "maxCommandSuggestions": 3,
-    "maxMessageLength": 1000,
+    "maxMessageLength": 100,
+    "maxMessages": 100,
+    "maxMessageBufferLength": 100,
+    "scrollStep": 20,
+    "maxMessageHistory": 100,
+    "unfocusKey": 27,
+    "focusKey": 84,
     "enableHTMLInjections": false,
     "enableDefaultMessageProcessor": true,
     "logPlayerMessages": true,
