--- a/views/react/tsconfig.json
+++ b/views/react/tsconfig.json
@@ -19,5 +19,6 @@
         "importsNotUsedAsValues": "error"
     },
     "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.json", "src/**/*.d.ts"],
+    "exclude": ["node_modules"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
