--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,19 +2,19 @@
     "name": "@altv-chat/client",
     "version": "1.0.0",
     "author": "5exyGuy (Aurėjus Remeika)",
+    "type": "module",
     "scripts": {
         "dev": "rollup -c -w",
         "build": "rollup -c"
     },
     "devDependencies": {
-        "@altv/types-client": "^2.3.2",
+        "@altv/types-client": "^2.3.7",
         "@altv/types-natives": "^1.4.5",
-        "@altv/types-shared": "^1.2.9",
+        "@altv/types-shared": "^1.3.1",
         "@altv/types-worker": "^1.0.7",
-        "@types/node": "^18.7.16",
-        "esbuild": "^0.15.7",
-        "rollup": "^2.79.0",
-        "rollup-plugin-esbuild": "^4.10.1",
-        "typescript": "^4.8.3"
+        "@types/node": "^18.11.9",
+        "esbuild": "^0.15.13",
+        "rollup": "^3.3.0",
+        "rollup-plugin-esbuild": "^5.0.0"
     }
 }
