--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -20,7 +20,9 @@
         "noUnusedParameters": true,
         "importsNotUsedAsValues": "error",
         "checkJs": true,
+        "baseUrl": "./",
         "typeRoots": ["./node_modules/@types", "./node_modules/@altv"]
     },
-    "include": ["src/**/*.ts", "src/**/*.d.ts"]
+    "include": ["src/**/*.ts", "src/**/*.d.ts"],
+    "exclude": ["node_modules"]
 }
