--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,16 +2,17 @@
     "name": "@altv-chat/server",
     "version": "1.0.0",
     "author": "5exyGuy (Aurėjus Remeika)",
+    "type": "module",
     "scripts": {
         "dev": "rollup -c -w",
         "build": "rollup -c"
     },
     "devDependencies": {
-        "@altv/types-server": "^2.4.6",
-        "@altv/types-shared": "^1.2.9",
-        "@types/node": "^18.7.16",
-        "esbuild": "^0.15.7",
-        "rollup": "^2.79.0",
-        "rollup-plugin-esbuild": "^4.10.1"
+        "@altv/types-server": "^2.5.0",
+        "@altv/types-shared": "^1.3.1",
+        "@types/node": "^18.11.9",
+        "esbuild": "^0.15.13",
+        "rollup": "^3.3.0",
+        "rollup-plugin-esbuild": "^5.0.0"
     }
 }
