--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@altv-chat/client",
+    "name": "@altv-vchat/client",
     "version": "1.0.3",
     "author": "5exyGuy (Aurėjus Remeika)",
     "type": "module",
