--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@altv-chat/types",
+    "name": "@altv-vchat/types",
     "description": "vChat resource types for alt:V.",
     "version": "1.0.3",
     "author": "5exyGuy (Aurėjus Remeika)",
