--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@altv-chat/server",
+    "name": "@altv-vchat/server",
     "version": "1.0.3",
     "author": "5exyGuy (Aurėjus Remeika)",
     "type": "module",
