--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -21,7 +21,10 @@
         "importsNotUsedAsValues": "error",
         "checkJs": true,
         "baseUrl": "./",
-        "typeRoots": ["./node_modules/@types", "./node_modules/@altv"]
+        "typeRoots": ["./node_modules/@types", "./node_modules/@altv"],
+        "paths": {
+            "@altv-vchat/shared": ["../shared/src"]
+        }
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts"],
     "exclude": ["node_modules"]
