--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,14 +5,22 @@
     "type": "module",
     "scripts": {
         "dev": "rollup -c -w",
-        "build": "rollup -c"
+        "build": "rollup -c --bundleConfigAsCjs"
+    },
+    "dependencies": {
+        "reflect-metadata": "^0.1.13",
+        "tsyringe": "^4.7.0"
     },
     "devDependencies": {
         "@altv/types-server": "^2.5.5",
         "@altv/types-shared": "^1.3.6",
+        "@rollup/plugin-commonjs": "^23.0.4",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@rollup/plugin-terser": "^0.2.0",
         "@types/node": "^18.11.13",
-        "esbuild": "^0.16.4",
         "rollup": "^3.7.3",
-        "rollup-plugin-esbuild": "^5.0.0"
+        "rollup-plugin-typescript2": "^0.34.1",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.4"
     }
 }
