--- a/emojis.json.example
+++ b/emojis.json.example
@@ -1,12 +1,15 @@
-[
-    {
-        "name": "smile",
-        "textEquivalent": ":)",
-        "url": "http://resource/emojis/smile.png"
-    },
-    {
-        "name": "laughing",
-        "textEquivalent": ":D",
-        "url": "http://resource/emojis/laughing.png"
-    }
-]
+{
+    "$schema": "https://raw.githubusercontent.com/5exyGuy/altv-vchat/master/schemas/emojis.schema.json",
+    "emojis": [
+        {
+            "name": "smile",
+            "textEquivalent": ":)",
+            "url": "http://resource/emojis/smile.png"
+        },
+        {
+            "name": "laughing",
+            "textEquivalent": ":D",
+            "extension": "png"
+        }
+    ]
+}
